--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 Flask==2.1.1
->=3.5.0,<3.7.0
+spacy>=3.5.0,<3.7.0
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz#egg=en_core_web_sm
