--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==2.1.1
 spacy>=3.0.0,<4.0.0
 pydantic>=1.6.0,<2.0.0
 thinc>=8.0.0,<9.0.0
 typing-extensions>=3.7.4,<4.0.0
+gunicorn>=20.1.0,<21.0.0
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz#egg=en_core_web_sm
