--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==2.1.1
-spacy>=2.0.0,<4.0.0
-pydantic>=1.6.0,<2.0.0
+spacy==3.6.1
+pydantic==2.4.2
 thinc>=8.0.0,<9.0.0
 typing-extensions!=4.7.0,>=4.6.0
 gunicorn>=20.1.0,<21.0.0
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz#egg=en_core_web_sm
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0.tar.gz#egg=en_core_web_sm
