--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ pydantic==2.4.2
 thinc>=8.0.0,<9.0.0
 typing-extensions!=4.7.0,>=4.6.0
 gunicorn>=20.1.0,<21.0.0
+summarizer==0.0.7
+transformers==4.8.2
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0.tar.gz#egg=en_core_web_sm
