--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ spacy==3.6.1
 pydantic==2.4.2
 thinc>=8.0.0,<9.0.0
 typing-extensions!=4.7.0,>=4.6.0
-gunicorn>=20.1.0,<21.0.0
+gunicorn==21.2.0
 summarizer==0.0.7
 transformers==4.8.2
 tokenizers==0.10.3
